fix(ci): avoid shell escaping issue when reading version

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,9 @@ jobs:
         run: npm run build
 
       - name: Read extension version
-        run: echo "VERSION=$(node -p \"require('./package.json').version\")" >> "$GITHUB_ENV"
+        run: |
+          VERSION=$(node -p "require('./package.json').version")
+          echo "VERSION=${VERSION}" >> "$GITHUB_ENV"
 
       - name: Package VSIX
         run: npx @vscode/vsce package --out "lobehub-markdown-editor-${VERSION}.vsix"
