feat(editor): add mermaid preview and interaction fixes

--- a/media-src/package.json
+++ b/media-src/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lobehub-markdown-editor-webview",
   "private": true,
-  "version": "0.0.39",
+  "version": "0.0.43",
   "scripts": {
     "build": "esbuild ./src/main.tsx --bundle --format=iife --platform=browser --sourcemap --minify --outfile=../media/dist/main.js --loader:.svg=file --loader:.png=file --loader:.jpg=file --loader:.jpeg=file --loader:.gif=file --loader:.webp=file --loader:.woff=file --loader:.woff2=file --loader:.ttf=file --define:process.env.NODE_ENV=\"'production'\""
   },
@@ -9,6 +9,7 @@
     "@lobehub/editor": "^3.16.1",
     "@lobehub/ui": "^4.11.5",
     "antd": "^6.1.4",
+    "mermaid": "^11.12.2",
     "motion": "^12.24.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
