--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
         run: npm ci
 
       - name: Install webview dependencies
-        run: npm --prefix ./media-src ci
+        run: npm --prefix ./media-src ci --legacy-peer-deps
 
       - name: Build extension
         run: npm run build
