--- a/media-src/package.json
+++ b/media-src/package.json
@@ -7,8 +7,11 @@
   },
   "dependencies": {
     "@lobehub/editor": "^3.16.1",
+    "@lobehub/fluent-emoji": "^4.1.0",
+    "@lobehub/icons": "^4.6.0",
     "@lobehub/ui": "^4.11.5",
     "antd": "^6.1.4",
+    "lucide-react": "^0.563.0",
     "mermaid": "^11.12.2",
     "motion": "^12.24.3",
     "react": "^19.2.0",
